--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@ padding-bottom: 50px;
     width: 20%;
     padding: 2%; 
     margin: 50px 0px 50px 110px; 
-    box-shadow: 10px 5px 40px rgb(46, 46, 46);
+    box-shadow: 5px 5px 25px rgb(46, 46, 46);
     border-radius: 30px;
     
 }
@@ -87,10 +87,11 @@ padding-bottom: 50px;
 
 .fan{
     display: flex;
-    box-shadow: 10px 0px 20px rgb(46, 46, 46);
+    box-shadow: 2px 0px 15px rgb(46, 46, 46);
     width: 90%;
     margin-left: 5%;
     margin-bottom: 100px;
+    border-radius: 50px 5px 50px 5px;
 }
 
 .fancontent{
